fix: distortation in product page thumbnails

--- a/src/components/molecules/product-thumbnails/ProductThumbnails.scss
+++ b/src/components/molecules/product-thumbnails/ProductThumbnails.scss
@@ -8,10 +8,12 @@
   cursor: pointer;
 
   & .product-thumbnail {
+    padding: 1rem;
+    background-color: transparent;
+
     &.current {
       border: 2px solid black;
       border-radius: 5px;
-      padding: 1rem;
     }
   }
   & img {
